# Generated by Django 5.1.5 on 2025-05-24 06:23

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='SalaryItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, verbose_name='项目名称')),
                ('code', models.CharField(max_length=20, verbose_name='项目编码')),
                ('item_type', models.CharField(choices=[('basic', '基本项目'), ('allowance', '津贴补助'), ('bonus', '奖金'), ('deduction', '扣除项目')], max_length=10, verbose_name='项目类型')),
                ('is_taxable', models.BooleanField(default=True, verbose_name='是否计税')),
                ('is_social_security', models.BooleanField(default=False, verbose_name='是否计入社保基数')),
                ('order', models.IntegerField(default=0, verbose_name='排序')),
                ('is_active', models.BooleanField(default=True, verbose_name='是否启用')),
            ],
            options={
                'verbose_name': '薪酬项目',
                'verbose_name_plural': '薪酬项目',
                'ordering': ['order'],
            },
        ),
        migrations.CreateModel(
            name='SalaryRecord',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('year', models.IntegerField(verbose_name='年份')),
                ('month', models.IntegerField(verbose_name='月份')),
                ('basic_salary', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='基本工资')),
                ('performance_bonus', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='绩效奖金')),
                ('allowances', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='津贴补助')),
                ('overtime_pay', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='加班费')),
                ('social_security', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='社保扣除')),
                ('housing_fund', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='公积金扣除')),
                ('income_tax', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='个人所得税')),
                ('other_deductions', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='其他扣除')),
                ('gross_salary', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='应发工资')),
                ('net_salary', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='实发工资')),
                ('status', models.CharField(choices=[('draft', '草稿'), ('approved', '已审批'), ('paid', '已发放')], default='draft', max_length=10, verbose_name='状态')),
                ('pay_date', models.DateField(blank=True, null=True, verbose_name='发放日期')),
                ('note', models.TextField(blank=True, verbose_name='备注')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='更新时间')),
            ],
            options={
                'verbose_name': '工资记录',
                'verbose_name_plural': '工资记录',
                'ordering': ['-year', '-month'],
            },
        ),
        migrations.CreateModel(
            name='SalaryStructure',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, verbose_name='薪酬结构名称')),
                ('description', models.TextField(blank=True, verbose_name='描述')),
                ('is_active', models.BooleanField(default=True, verbose_name='是否启用')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
            ],
            options={
                'verbose_name': '薪酬结构',
                'verbose_name_plural': '薪酬结构',
            },
        ),
        migrations.CreateModel(
            name='SalaryDetail',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('amount', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='金额')),
                ('note', models.CharField(blank=True, max_length=200, verbose_name='备注')),
                ('salary_item', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='salary.salaryitem', verbose_name='薪酬项目')),
            ],
            options={
                'verbose_name': '工资明细',
                'verbose_name_plural': '工资明细',
            },
        ),
    ]
